--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "babel -d ./lib ./src",
     "prepublish": "babel -d ./lib ./src --minified",
-    "test": "node test"
+    "test": "node test",
+    "watch": "nodemon --exec npm run test"
   },
   "repository": {
     "type": "git",
@@ -24,6 +25,7 @@
     "babel-preset-es2015": "^6.18.0",
     "chalk": "^1.1.3",
     "clear": "0.0.1",
-    "diff": "^3.0.1"
+    "diff": "^3.0.1",
+    "nodemon": "^1.12.1"
   }
 }
